# scan-erp-packages

./: .gitignore  README.md
npm-packages/garment-bundle-id/: README.md  index.d.ts  index.js  package.json
npm-packages/garment-piece-rate/: README.md  index.d.ts  index.js  package.json
npm-packages/garment-smv-calculator/: LICENSE  README.md  index.d.ts  index.js  package.json
pypi-packages/garment-bundle-id/: README.md  pyproject.toml
pypi-packages/garment-bundle-id/src/garment_bundle_id/: __init__.py
pypi-packages/garment-piece-rate/: README.md  pyproject.toml
pypi-packages/garment-piece-rate/src/garment_piece_rate/: __init__.py
pypi-packages/garment-smv-calculator/: README.md  pyproject.toml
pypi-packages/garment-smv-calculator/src/garment_smv_calculator/: __init__.py
